Traefik-labs/traefik/ingressroute2.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.adminakademia.pl`, `nginx.adminrulez.pl`) 
      kind: Rule
      services:
        - name: nginx-deploy-czerwony
          port: 80
